# test_task

./: README.md  memory_alarm.py
flask_task/: app.py  docker-compose.yml  dockerfile  pyproject.toml
