[tool.poetry]
name = "flask-task"
version = "0.1.0"
description = ""
authors = ["leanpilled <yulya_9@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
pymongo = "^4.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
